--- a/client/package.json
+++ b/client/package.json
@@ -2,18 +2,22 @@
   "name": "mern-stack-client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.9.1",
+    "@react-oauth/google": "^0.2.6",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "dotenv": "^16.0.2",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.27.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-file-base64": "^1.0.3",
+    "react-google-login": "^5.2.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "3.4.1",
